# orion-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  STYLE.md  config.h.in  orion.config.h.in  pch.h  vcpkg.json
assets/: CMakeLists.txt  config.h.in
assets/effects/: default.ofx  object.ofx  present.ofx
assets/shaders/: CMakeLists.txt  basic.hlsl  basic.ps.hlsl  basic.vs.hlsl  frag.hlsl  fragment.hlsl  imgui.ps.hlsl  imgui.vs.hlsl  object.ps.hlsl  object.vs.hlsl  present.ps.hlsl  present.vs.hlsl  quad.ps.hlsl  quad.vs.hlsl  triangle.ps.hlsl  triangle.vs.hlsl  vert.hlsl  vertex.hlsl
core/: CMakeLists.txt  config.h.in
core/include/orion-core/: CMakeLists.txt  clock.h  defs.h  dyn_lib.h  event.h  filesystem.h  frametime.h  handle.h  input.h  log.h  module.h  platform.h  types.h  version.h  window.h
core/platform/: CMakeLists.txt
core/platform/win32/: CMakeLists.txt
core/src/: CMakeLists.txt  clock.cpp  dl_lib.cpp  dyn_lib.cpp  filesystem.cpp  input.cpp  log.cpp  module.cpp  window.cpp
core/src/platform/: CMakeLists.txt
core/tests/: event.cpp
engine/: CMakeLists.txt
engine/include/orion-engine/: CMakeLists.txt  application.h  entry_point.h  orion-engine.h
engine/src/: application.cpp
math/: CMakeLists.txt
math/include/orion-math/: CMakeLists.txt  abs.h  angles.h  constants.h  func.h  sqrt.h  trig.h
math/tests/: CMakeLists.txt  abs.cpp  angles.cpp  matrix.cpp  projection.cpp  sqrt.cpp  transformation.cpp  trig.cpp  vector.cpp
modules/renderer/: CMakeLists.txt  config.h.in
modules/renderer/backend/: CMakeLists.txt
modules/renderer/src/: renderer.cpp  shader_compiler.cpp
platform/: CMakeLists.txt
platform/include/orion-platform/: CMakeLists.txt  clock.h  dyn_lib.h  input.h  platform.h  window.h
platform/src/: CMakeLists.txt  input.cpp  window.cpp
platform/win32/src/: CMakeLists.txt  win32_clock.cpp  win32_dyn_lib.cpp  win32_input.cpp  win32_platform.cpp  win32_window.cpp
renderapi/: CMakeLists.txt  config.h.in
renderapi/include/orion-renderapi/: CMakeLists.txt  blend.h  buffer.h  command.h  defs.h  descriptor.h  device_resource.h  format.h  handles.h  image.h  physical_device.h  pipeline.h  queue.h  render_backend.h  render_command.h  render_device.h  render_pass.h  render_queue.h  shader.h  shader_reflection.h  swapchain.h  types.h
renderapi/src/: CMakeLists.txt  buffer.cpp  command.cpp  defs.cpp  descriptor.cpp  device_resource.cpp  format.cpp  physical_device.cpp  pipeline.cpp  render_backend.cpp  render_command.cpp  render_device.cpp  render_pass.cpp  render_queue.cpp  shader_reflection.cpp  swapchain.cpp  types.cpp
renderapi/vulkan/: CMakeLists.txt  volk_impl.cpp  vulkan_backend.cpp  vulkan_backend.h  vulkan_command.cpp  vulkan_command.h  vulkan_conversion.cpp  vulkan_conversion.h  vulkan_device.cpp  vulkan_device.h  vulkan_headers.h  vulkan_platform.h  vulkan_queue.cpp  vulkan_queue.h  vulkan_reflection.cpp  vulkan_reflection.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_resource.cpp  vulkan_resource.h  vulkan_store.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_synchronization.cpp  vulkan_synchronization.h  vulkan_types.cpp  vulkan_types.h  vulkan_win32.cpp
renderapi/vulkan/platform/: vulkan_macos.cpp  vulkan_win32.cpp
renderer/: CMakeLists.txt  config.h.in  imconfig.h.in  shaders.cmake
renderer/backend/: CMakeLists.txt
renderer/backend/src/: CMakeLists.txt  buffer.cpp  command.cpp  descriptor.cpp  pipeline.cpp  render_backend.cpp  render_device.cpp  swapchain.cpp  types.cpp
renderer/backend/vulkan/: CMakeLists.txt  config.h.in  vulkan_backend.cpp  vulkan_backend.h  vulkan_buffer.cpp  vulkan_conversion.h  vulkan_device.cpp  vulkan_device.h  vulkan_headers.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_platform.h  vulkan_store.cpp  vulkan_store.h  vulkan_types.cpp  vulkan_types.h  vulkan_win32.cpp
renderer/include/orion-renderer/: CMakeLists.txt  buffer.h  camera.h  colors.h  effect.h  frame.h  imgui.h  material.h  mesh.h  quad_renderer.h  render_context.h  render_target.h  render_window.h  renderer.h  shader.h  shader_compiler.h  sprite_renderer.h  texture.h  types.h  (+1 more)
renderer/src/: CMakeLists.txt  buffer.cpp  camera.cpp  dxc_include.h  effect.cpp  frame.cpp  imgui.cpp  imgui_impl_orion.cpp  imgui_impl_orion.h  material.cpp  mesh.cpp  quad_renderer.cpp  render_context.cpp  render_target.cpp  render_window.cpp  renderer.cpp  shader.cpp  shader_compiler.cpp  sprite_renderer.cpp  texture.cpp
scene/: CMakeLists.txt
scene/src/: CMakeLists.txt  components.cpp  entity.cpp  scene.cpp
scene/tests/: CMakeLists.txt  components.cpp
shader-compiler/: CMakeLists.txt  main.cpp
shader-compiler/src/: CMakeLists.txt  compiler.cpp  dxc_impl.cpp  dxc_impl.h
src/: CMakeLists.txt  application.cpp  assert.cpp  config.h.in  debug.cpp  entry_point.cpp  event.cpp  input.cpp  log.cpp  orion.cpp  window.cpp
src/core/: application.cpp  engine.cpp  entry_point.cpp
src/platform/: platform_glfw.cpp  platform_glfw.hpp  rhi_vulkan.cpp
src/renderapi/: bind_group.cpp  descriptor.cpp  format.cpp  image.cpp  pipeline.cpp  render_backend.cpp  render_command.cpp  render_device.cpp  render_queue.cpp  shader.cpp  swapchain.cpp  sync.cpp
src/renderer/: camera.cpp  imgui_context.cpp  imgui_context.hpp  pipeline.cpp  render_graph.cpp  renderer.cpp  sprite_renderer.cpp  vulkan_impl.cpp  vulkan_impl.hpp
src/rhi/: buffer.cpp  command.cpp  device.cpp  handle.cpp  image.cpp  pipeline.cpp  rhi.cpp  rhi_device.cpp  rhi_instance.cpp  swapchain.cpp  synchronization.cpp
src/shaders/: CMakeLists.txt  triangle.vert
src/win32/: CMakeLists.txt  orion_win32.cpp  orion_win32.h  win32_window.cpp  win32_window.h  win32_window.hpp
tests/: CMakeLists.txt  basic.cpp  log.cpp  matrix.cpp  sqrt.cpp  transform.cpp  vector.cpp
tests/events/: CMakeLists.txt  event_dispatcher.cpp
tests/utility/: CMakeLists.txt  contains.cpp  index_of.cpp
utils/: CMakeLists.txt
utils/tests/: CMakeLists.txt  array.cpp  bitflag.cpp  linear_allocator.cpp  static_vector.cpp  string.cpp
(+358 files in other folders)
